test/ui/tests/fail/class-missing-forced-context.rs
struct Example;

#[neon::class]
impl Example {
    #[neon(context)]
    fn method(&self) {}
}

fn main() {}
